# Python_Test

./: .gitignore  README.md  requirements.txt
Demo/Python_Matplotlib/: graph.py  test_matplotlib_1.py  test_matplotlib_2.py  test_matplotlib_3.py
Demo/Python_NumPy/: test_numpy_1.py
Demo/Python_OpenCV/: test_opencv_2.py
Demo/Python_PyMongo/: test_pymongo_1.py
Demo/Python_RPC/: test_server_1.py
Demo/Python_Smtp/: test_smtp_1.py
Demo/simple_code/: _class.py  _conditional.py  _data_structure.py  _dictionary.py  _errors_execptions.py  _function.py  _input_output.py  _iterator_generator.py  _list.py  _loop.py  _module.py  _multi_thread.py  _operator.py  _stdlib.py  _string.py  _tmp1.py  _tmp2.py  _tuple.py  class.py  data_structure.py  errors_execptions.py  function.py  get_dir_file_info.py  input_output.py  list.py  module.py  multi_thread.py  operator.py  tmp2.py
demo/: test_camera_parameters_to_transforms_json.py  test_class_special_methods.py  test_colmap_parse_txt_draw_circle.py  test_colmap_rotation_matrix_to_quaternion.py  test_cryptography_aes.py  test_cryptography_rsa.py  test_fastapi.py  test_fastapi_pyomo.py  test_fastapi_pyomo_server.py  test_mp4_to_gif.py  test_parse_transforms_json.py  test_pyd.py  test_pyomo_linear_programming.py  test_pyomo_linear_programming2.py  test_scipy_minimize.py  test_txt_to_json.py
demo/Python_Matplotlib/: test_matplotlib_2.py  test_matplotlib_3.py
demo/Python_PIL/: test_pil.py
demo/Python_RPC/: test_client_1.py
prj/linux_cmake_Python_Cplusplus/: CMakeLists.txt  build.sh
src/: version.txt
test_data/: diet.json
(+66 files in other folders)
